[metadata]
name = palworld-server-toolkit
version = 0.2.4
author = MagicBear
author_email = magicbearmo@gmail.com
description = A toolset for PalWorld Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magicbear/palworld-server-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir = 
install_requires =
	palworld-save-tools
python_requires = >=3.9
include_package_data = true

[option.package_data]
* = PalEdit/*
