[metadata]
name = palworld-server-toolkit
version = 0.4.3
author = MagicBear
author_email = magicbearmo@gmail.com
description = A toolset for PalWorld Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magicbear/palworld-server-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    palworld_server_toolkit.PalEdit=palworld_server_toolkit/PalEdit
    palworld_server_toolkit.PalEdit.lib=palworld_server_toolkit/PalEdit/lib
    palworld_server_toolkit.PalEdit.lib.rawdata=palworld_server_toolkit/PalEdit/lib/rawdata
#packages = find:
packages = 
    palworld_server_toolkit
    palworld_server_toolkit.PalEdit
    palworld_server_toolkit.PalEdit.lib
    palworld_server_toolkit.PalEdit.lib.rawdata
python_requires = >=3.9
