[metadata]
name = palworld-server-toolkit
version = 0.8.4
author = MagicBear
author_email = magicbearmo@gmail.com
description = A toolset for PalWorld Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magicbear/palworld-server-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    palworld_pal_edit=pal_edit/palworld_pal_edit
#packages = find:
packages =
    palworld_server_toolkit
    palworld_pal_edit
python_requires = >=3.9
exclude =
    CxFreezeCompile.py
    palworld_server_toolkit/premium.py